--- a/Parte 1.ipynb
+++ b/Parte 1.ipynb
@@ -49,6 +49,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Primero guardamos el alfabeto en la variable alfabeto\n",
+    "\n",
     "Aqui iteramos en cada letra del alfabeto y verifica si está la letra en minusculas esta en nuestro string en complejidad O(n)\n",
     "Luego probamos el ejemplo dado y verificamos"
    ]
@@ -56,13 +58,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Primero creamos una clase nodo con sus getters y setters, para manejar cada nodo como una estructura con su valor, su hijo izquierdo y su hijo derecho"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        ":sort"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
    "source": [
     "class BinaryTree\n",
     "  attr_accessor :valor, :izq, :der\n",
-    "  def initialize\n",
+    "  def initialize(valor)\n",
     "    @root = nil\n",
     "  end\n",
     "\n",
@@ -129,8 +129,8 @@
     "  end\n",
     "\n",
     "  def any?(&bloque)\n",
-    "    self.each { \n",
-    "      |elt| return true if yield(elt)\n",
+    "    self.each {|elt| \n",
+    "      return true if yield(elt)\n",
     "    }\n",
     "    false\n",
     "  end\n",
@@ -138,7 +138,8 @@
     "  def sort\n",
     "    to_a.sort\n",
     "  end\n",
-    "end\n"
+    "end\n",
+    "\n"
    ]
   },
   {
@@ -170,8 +171,8 @@
     "El método include? verifica si un elemento (elt) está presente en el árbol.\n",
     "Comienza comparando elt con el valor del nodo actual (@valor).\n",
     "Si son iguales, devuelve true, indicando que el elemento está presente.\n",
-    "Si elt es menor que @valor, se verifica si existe un subárbol izquierdo (@izquierda) y se llama recursivamente a include? en ese subárbol.\n",
-    "Si elt es mayor que @valor, se verifica si existe un subárbol derecho (@derecha) y se llama recursivamente a include? en ese subárbol.\n",
+    "Si elt es menor que @valor, se verifica si existe un subárbol izquierdo (@izquierda) y se llama  a include? en ese subárbol.\n",
+    "Si elt es mayor que @valor, se verifica si existe un subárbol derecho (@derecha) y se llama  a include? en ese subárbol.\n",
     "Si no se encuentra el elemento en ningún lugar, se devuelve false.\n",
     "## Método all?:\n",
     "\n",
