--- a/Parte 2.ipynb
+++ b/Parte 2.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aqui añadimos el campo :description en el archivo movies_controller"
+    "### Para esta parte de modificar el campo descripcion: añadimos el campo :description en el archivo movies_controller"
    ]
   },
   {
@@ -67,11 +67,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Para la parte de la robustesa del codigo, insertamos el manejo de errores en el metodo show:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "def show\n",
+    "    begin\n",
+    "      @movie = Movie.find(params[:id])\n",
+    "    rescue ActiveRecord::RecordNotFound\n",
+    "      redirect_to movies_url, notice: \"No existe ninguna película con ese ID\" \n",
+    "    end\n",
+    "  end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Si al buscar el parametro obtenemos un error : RecordNotFound, nos dirigimos a movies_url con redirect_to\n",
+    "redirect_to movies_url\n",
+    "### Y alertamos al usuario\n",
+    " notice: \"No existe ninguna película con ese ID\" \n"
+   ]
   }
  ],
  "metadata": {
